@@ -11,11 +11,6 @@
     </properties>
     <dependencies>
         <dependency>
-            <groupId>org.postgresql</groupId>
-            <artifactId>postgresql</artifactId>
-            <version>42.3.1</version>
-        </dependency>
-        <dependency>
             <groupId>de.jensd</groupId>
             <artifactId>fontawesomefx-fontawesome</artifactId>
             <version>4.7.0-9.1.2</version>
@@ -31,11 +26,6 @@
             <version>13</version>
         </dependency>
         <dependency>
-            <groupId>com.google.code.maven-play-plugin.postgresql</groupId>
-            <artifactId>postgresql</artifactId>
-            <version>9.0-801.jdbc4-patched-play-1.2.3</version>
-        </dependency>
-        <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-graphics</artifactId>
             <version>17.0.1</version>
@@ -48,7 +38,12 @@
         <dependency>
             <groupId>org.controlsfx</groupId>
             <artifactId>controlsfx</artifactId>
-            <version>11.0.1</version>
+            <version>11.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.3.1</version>
         </dependency>
     </dependencies>
     <build>
@@ -56,58 +51,101 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.0</version>
+                <version>3.8.1</version>
                 <configuration>
                     <release>11</release>
+                    <compilerArgs>
+                        <arg>--add-exports=javafx.base/com.sun.javafx.runtime=ALL-UNNAMED</arg>
+                        <arg>--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED</arg>
+                        <arg>--add-exports=avafx.controls/com.sun.javafx.scene.control.inputmap=ALL-UNNAMED</arg>
+                        <arg>--add-exports=javafx.graphics/com.sun.javafx.scene.traversal=ALL-UNNAMED</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>org.openjfx</groupId>
-                <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.4</version>
-                <configuration>
-                    <mainClass>gr.ihu.ermistv.App</mainClass>
-                </configuration>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
                 <executions>
                     <execution>
-                        <!-- Default configuration for running -->
-                        <!-- Usage: mvn clean javafx:run -->
-                        <id>default-cli</id>
-                    </execution>
-                    <execution>
-                        <!-- Configuration for manual attach debugging -->
-                        <!-- Usage: mvn clean javafx:run@debug -->
-                        <id>debug</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
                         <configuration>
-                            <options>
-                                <option>-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=localhost:8000</option>
-                            </options>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <!-- Configuration for automatic IDE debugging -->
-                        <id>ide-debug</id>
-                        <configuration>
-                            <options>
-                                <option>-agentlib:jdwp=transport=dt_socket,server=n,address=${jpda.address}</option>
-                            </options>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <!-- Configuration for automatic IDE profiling -->
-                        <id>ide-profile</id>
-                        <configuration>
-                            <options>
-				<option>${profiler.jvmargs.arg1}</option>
-				<option>${profiler.jvmargs.arg2}</option>
-				<option>${profiler.jvmargs.arg3}</option>
-				<option>${profiler.jvmargs.arg4}</option>
-				<option>${profiler.jvmargs.arg5}</option>
-                            </options>
+                            <archive>
+                            <manifest>
+                                <mainClass>
+                                    gr.ihu.ermistv.App
+                                </mainClass>
+                            </manifest>
+                            </archive>
+                            <descriptorRefs>
+                                <descriptorRef>jar-with-dependencies</descriptorRef>
+                            </descriptorRefs>
                         </configuration>
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.panteleyev</groupId>
+                <artifactId>jpackage-maven-plugin</artifactId>
+                <version>1.4.0</version>
+                
+                <configuration>
+                  <name>ermistv</name>
+                  <windirchooser>true</windirchooser>
+                  <appVersion>1.0.0</appVersion>
+                  <vendor>gr.ihu</vendor>
+                  <destination>target/dist</destination>
+                  <module>gr.ihu.ermistv/gr.ihu.ermistv.App</module>
+                  <input>app</input>
+<!--                  <modulePaths>
+                    <modulePath>test.txt</modulePath>
+                  </modulePaths>-->
+
+                  <runtimeImage>target/ermisTv</runtimeImage>
+                  <javaOptions>
+                    <option>-Dfile.encoding=UTF-8</option>
+                  </javaOptions>
+                  
+                </configuration>
+                
+                 <executions>
+                    <execution>
+                        <id>mac</id>
+                        <configuration>
+                            <icon>icons/icons.icns</icon>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>win</id>
+                        <configuration>
+                            <!--<icon>icons/athena.ico</icon>-->
+                            <winDirChooser>true</winDirChooser>
+                            <winConsole>true</winConsole>
+                            <winMenu>true</winMenu>
+                        </configuration>
+                    </execution>
+                </executions>
+                
+              </plugin>
+            <plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.8</version>
+                <configuration>
+                    <stripDebug>true</stripDebug>
+                    <compress>2</compress>
+                    <noHeaderFiles>true</noHeaderFiles>
+                    <noManPages>true</noManPages>
+                    <launcher>ermistv</launcher>
+                    <jlinkImageName>ermistv</jlinkImageName>
+                    <jlinkZipName>ermistv</jlinkZipName>
+                    <mainClass>gr.ihu.ermistv.App</mainClass>
+                    
+                </configuration>
+            </plugin>
+            
         </plugins>
     </build>
 </project>
